--- a/src/resume.html
+++ b/src/resume.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <header>
-        <h1 id="name" >Christopher Lee Messer, CPA</h1>
+        <h1 id="name" >Christopher Lee Messer</h1>
         <div id="textbox">
             <p class="alignleft">Fort Worth, TX 76104</p>
             <p class="aligncenter"></p>
@@ -21,38 +21,39 @@
 
     </header>
 
-    <div class="content" role=main>
 
+    <main>
         <section id="Education">
             <h2 class="title">EDUCATION</h2>
             <hr>
 
-            <div class="school">
+            <school class="school">
                 <h3 class="schoolname">Georgia Institute of Technology</h3>
-                    <div class="degree">
+                    <degree_ class="degree">
                         <p>
                             <span class="left">M.S. Computation Analytics</span><span class="right">In Progress</span>
+                            <div style="clear: both;"></div>
                             <br>
                         </p>
-                    </div>
-            </div>
+                    </degree_>
+            </school>
 
-            <div class="school">
+            <school class="school">
                 <h3 class="schoolname">Texas Christian University, Neeley School of Business</h3>
-                    <div class="degree">
+                    <degree_ class="degree">
                         <p>
                             <span class="left">Master of Accounting <i>(Honors)</i></span><span class="right">May 2018</span>
                             <br>
                         </p>
-                    </div>
+                    </degree_>
 
-                <div class="degree">
-                    <p>
-                        <span class="left">Master of Accounting <i>(Honors)</i></span><span class="right">May 2018</span>
-                        <br>
-                    </p>
-                </div>
-            </div>
+                    <degree_ class="degree">
+                        <p>
+                            <span class="left">Master of Accounting <i>(Honors)</i></span><span class="right">May 2018</span>
+                            <br>
+                        </p>
+                    </degree_>
+            </school>
              <!-- end description -->
         </section>
 
@@ -60,116 +61,112 @@
             <h2 class="title">PROFESSIONAL EXPERIENCE</h2>
             <hr>
 
-            <div class="company">
-                <h3 class="companyname">Deloitte Consulting, Dallas, Texas</h3>
-                <div class="degree">
+            <company class="company">
+                <h3 class="companyname">
+                    <b>Deloitte Consulting</b>, Dallas, Texas
+                    <span class="right"><i>Feb. 2022 - Present</i></span>
+                </h3>
+                <role class="role">
                     <p>
-                        <span class="left">M.S. Computation Analytics</span><span class="right">In Progress</span>
+                        <span class="left"><i>AI & Data Engineering, Consultant</i></span>
                         <br>
-                    </p>
-                </div>
-            </div>
 
-            <div class="school">
-                <h3 class="schoolname">Texas Christian University, Neeley School of Business</h3>
-                <div class="degree">
-                    <p>
-                        <span class="left">Master of Accounting <i>(Honors)</i></span><span class="right">May 2018</span>
-                        <br>
                     </p>
-                </div>
+                    <responsibilities class="responsibilities">
+                        <ul>
+                            <li>Convert python, PHP, and JS code and document system architecture via flowcharts and
+                                text-based reports</li>
+                            <li>Investigate failures in production billing systems, and design and execute stop-gap
+                                solutions using python</li>
+                            <li>Design and build dashboards in Tableau to present data quality errors to executive leadership</li>
+                            <li>Design, build, and deploy data pipelines using python and AWS</li>
+                            <li>Document source-to-target mappings to facilitate data migration for system implementations</li>
+                            <li>Facilitate DEI recruiting campaigns, mentoring high school to college students in careers in consulting</li>
+                        </ul>
 
-                <div class="degree">
+                    </responsibilities>
+                </role>
+            </company>
+
+            <company class="company">
+                <h3 class="companyname">
+                    <b>Deloitte & Touche LLP</b>, Fort Worth, Texas
+                    <span class="right"><i>Aug. 2018 – Feb. 2022</i></span>
+                </h3>
+                <role class="role">
                     <p>
-                        <span class="left">Master of Accounting <i>(Honors)</i></span><span class="right">May 2018</span>
+                        <span class="left"><i>Environmental, Social & Corporate Governance Advisory Senior</i></span>
+                        <span class="right"><i>(Summers)</i></span>
                         <br>
+
                     </p>
-                </div>
-            </div>
+                    <responsibilities class="responsibilities">
+                        <ul>
+                            <li>Performed gap analyses to benchmark clients’ climate readiness against leading competitors</li>
+                            <li>Completed an ESG materiality assessment and risk & opportunity analysis for a major money transfer and payment processing company</li>
+                            <li>Interview executive stakeholders to identify risks and opportunities presented by climate change</li>
+                            <li>Facilitate panel discussions with internal ESG leaders</li>
+                            <li>Plan, prepare, and present summarized findings to executive leadership</li>
+                        </ul>
+
+                    </responsibilities>
+                </role>
+
+
+                <role class="role">
+                    <p>
+                        <span class="left"><i>Senior Auditor</i></span>
+                        <span class="right"><i>(Fall/Winter/Spring)</i></span>
+                        <br>
+
+                    </p>
+                    <responsibilities class="responsibilities">
+                        <ul>
+                            <li>Interface between client and data analytics team to gather visualization requirements, retrieve necessary data, and create Tableau visualizations to further audit risk assessment</li>
+                            <li>Plan, manage, and execute a 15,000-hour annual audit in accordance with PCAOB guidelines in a remote working environment</li>
+                            <li>Create process flow diagrams and narratives to understand complex accounting processes and identify risks of material misstatement</li>
+                            <li>Coach and manage a team of five staff auditors in professional development and audit execution</li>
+                            <li>Traveled to Gurgaon, India office to build relationships and expand utilization of USI team. Increased USI utilization by 18% and created a 24-hour work cycle.</li>
+                            <li>Rated #1 out of 66 in the Staff and Senior Audit group in the Central Texas office for three consecutive years</li>
+                        </ul>
+
+                    </responsibilities>
+                </role>
+            </company>
+
+
+
             <!-- end description -->
         </section>
 
+        <section id="personal_projects">
+            <h2 class="title">PERSONAL PROJECTS</h2>
+            <hr>
+            <ul>
+            <li>Created a network visualization of TCU student Instagram accounts to categorize students into social circles.</li>
+                <li>Designed freshmen dormitory orientation around categories, increasing program attendance by 20%</li>
+                <li>Built a database that tracked and stored deleted tweets of US legislative politicians using Python and SQL</li>
+                <li>Generated $5,000 in revenue from a Python and SQL program that scraped a user’s social media, generated a similar message with Machine Learning, and tweeted the result. Program deployed on Heroku</li>
+                <li>Developed and marketed a “smart” coaster powered by NFC, generating $1,000 in monthly revenue</li>
+            </ul>
+        </section>
 
-
-        <section id="projects">
-            <h2 class="title">Projects Undertaken</h2>
-            <div class="description">
-
-                <!-- Project 1 -->
-                <section class="project">
-                    <h3 class="title">Title of the project</h3>
-                    <div class="meta">
-                        <span class="field">Project Field</span> <span class="date">Aug 2010 - Nov2010</span>
-                    </div>
-                    <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                </section> <!-- end project description -->
-
-                <!-- project 2 -->
-                <section class="project">
-                    <h3 class="title">Title of the project</h3>
-                    <div class="meta">
-                        <span class="field">Project Field</span> <span class="date">Aug 2010 - Nov2010</span>
-                    </div>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                </section> <!-- end project description -->
-
-
-                <!-- project 3 -->
-                <section class="project">
-                    <h3 class="title">Title of the project</h3>
-                    <div class="meta">
-                        <span class="field">Project Field</span> <span class="date">Aug 2010 - Nov2010</span>
-                    </div>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                </section> <!-- end project description -->
-
-            </div> <!-- end description -->
+        <section id="competencies">
+            <h2 class="title">COMPETENCIES</h2>
+            <hr>
+            <ul class="competencies_list">
+                <li>Specialist Certification – Word, Excel, PowerPoint, Access</li>
+                <li>Programming Languages – Visual Basic for Applications, Python, SQL</li>
+                <li>Cloud Services – AWS, GCP</li>
+                <li>Data visualization software – Tableau, Power BI, Gephi</li>
+                <li>Professional Certifications – Texas Certified Public Accountant</li>
+            </ul>
         </section>
 
 
-        <!-- Training/ seminars -->
 
-
-
-        <!-- Scholistics Achievements -->
-
-
-
-        <!-- Technical Skills -->
-
-
-        <!-- Extra-Curricular Activities -->
-
-
-        <!-- Personal Informations -->
-
-
-        <!-- References -->
-
-
-
-        <!-- Declarations -->
-
-
-        <!-- signatory -->
-
-
-
-
+    </main>
     </div> <!-- end main content -->
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div> <!-- end container -->
 
 </body>
