--- a/src/resume.html
+++ b/src/resume.html
@@ -97,24 +97,7 @@
                     <b>Deloitte & Touche LLP</b>, Fort Worth, Texas
                     <span class="right"><i>Aug. 2018 – Feb. 2022</i></span>
                 </h3>
-                <role class="role">
-                    <p>
-                        <span class="left"><i>Environmental, Social & Corporate Governance Advisory Senior</i></span>
-                        <span class="right"><i>(Summers)</i></span>
-                        <br>
 
-                    </p>
-                    <responsibilities class="responsibilities">
-                        <ul>
-                            <li>Performed gap analyses to benchmark clients’ climate readiness against leading competitors</li>
-                            <li>Completed an ESG materiality assessment and risk & opportunity analysis for a major money transfer and payment processing company</li>
-                            <li>Interview executive stakeholders to identify risks and opportunities presented by climate change</li>
-                            <li>Facilitate panel discussions with internal ESG leaders</li>
-                            <li>Plan, prepare, and present summarized findings to executive leadership</li>
-                        </ul>
-
-                    </responsibilities>
-                </role>
 
 
                 <role class="role">
@@ -126,12 +109,12 @@
                     </p>
                     <responsibilities class="responsibilities">
                         <ul>
-                            <li>Interface between client and data analytics team to gather visualization requirements, retrieve necessary data, and create Tableau visualizations to further audit risk assessment</li>
-                            <li>Plan, manage, and execute a 15,000-hour annual audit in accordance with PCAOB guidelines in a remote working environment</li>
-                            <li>Create process flow diagrams and narratives to understand complex accounting processes and identify risks of material misstatement</li>
-                            <li>Coach and manage a team of five staff auditors in professional development and audit execution</li>
-                            <li>Traveled to Gurgaon, India office to build relationships and expand utilization of USI team. Increased USI utilization by 18% and created a 24-hour work cycle.</li>
-                            <li>Rated #1 out of 66 in the Staff and Senior Audit group in the Central Texas office for three consecutive years</li>
+                            <li>Designed outlier detection model to identify unusual transactions for audit selection, reducing audit hours by 8%</li>
+                            <li>Gathered visualization requirements, retrieved transaction data, and designed and built Tableau visualizations to further audit risk assessment</li>
+                            <li>Retrieved and analyzed transaction data using Python and SQL</li>
+                            <li>Managed a team of 7 direct report staff auditors in the completion of a 15,000 hour annual audit</li>
+                            <li>Created process flow diagrams and narratives to understand complex accounting processes and identify risks of material misstatement</li>
+                            <li>Traveled to Gurgaon, India office to build relationships and expand utilization of USI team, increasing offshore utilization by 18% and created a 24-hour work cycle.</li>
                         </ul>
 
                     </responsibilities>
