--- a/src/resume.html
+++ b/src/resume.html
@@ -72,7 +72,7 @@
                 </h3>
                 <role class="role">
                     <p>
-                        <span class="left"><i>AI & Data Engineering, Consultant</i></span>
+                        <span class="left"><i>AI & Data Engineering, Senior Consultant</i></span>
                         <br>
 
                     </p>
@@ -131,12 +131,13 @@
             <hr>
             <responsibilities class="responsibilities">
             <ul>
-            <li>Created a network visualization to cluster incoming students based on common friends, increasing orientation program attendance by 12% year over year</li>
-                <li>Built a database that tracked and stored deleted tweets of US legislative politicians using Python and SQL</li>
-                <li>Built an application to predict the price of Bitcoin based off of the sentiment of Reddit comments</li>
                 <li>Completed the
                     <a href="https://cloudresumechallenge.dev/docs/the-challenge/aws/">cloud resume challenge</a>
                     using AWS services (Lambda, Route 53, API Gateway, S3, DynamoDB) and deployed using CloudFormation</li>
+                <li>Created a network visualization to cluster incoming students based on common friends, increasing orientation program attendance by 12% year over year</li>
+                <li>Built a <a href="https://github.com/chris-messer/e-ink-budget-tracker">personal budget tracker</a> using a Raspberry Pi, Python, and Mint.com API</li>
+                <li><a href="https://github.com/chris-messer/bitcoin-sentiment-price-analysis">Completed an analysis</a> that measures the correlation between sentiment of Bitcoin Tweets and Reddit comments and the price of Bitcoin</li>
+
             </ul>
             </responsibilities>
         </section>
