--- a/src/resume.html
+++ b/src/resume.html
@@ -35,7 +35,7 @@
                 <h3 class="schoolname">Georgia Institute of Technology</h3>
                     <degree_ class="degree">
                         <p>
-                            <span class="left">M.S. Computation Analytics</span><span class="right">In Progress</span>
+                            <span class="left">Master of Science, Computation Analytics</span><span class="right">In Progress</span>
                             <div style="clear: both;"></div>
                             <br>
                         </p>
@@ -53,7 +53,7 @@
 
                     <degree_ class="degree">
                         <p>
-                            <span class="left">BBA Accounting, Finance <i>(Magma Cum Laude)</i></span><span class="right">May 2018</span>
+                            <span class="left">B.B.A., Accounting & Finance <i>(Magma Cum Laude)</i></span><span class="right">May 2018</span>
                             <br>
                         </p>
                     </degree_>
@@ -74,22 +74,33 @@
                     <p>
                         <span class="left"><i>AI & Data Engineering, Senior Consultant</i></span>
                         <br>
-
                     </p>
-                    <responsibilities class="responsibilities">
-                        <ul>
-                            <li>Convert python, PHP, and JS code and document system architecture via flowcharts and
-                                text-based reports</li>
-                            <li>Investigate failures in production billing systems, and design and execute stop-gap
-                                solutions using python</li>
-                            <li>Design and build dashboards in Tableau to present data quality errors to executive leadership</li>
-                            <li>Design, build, and deploy data pipelines using python and AWS</li>
-                            <li>Document source-to-target mappings to facilitate data migration for system implementations</li>
-                            <li>Facilitate DEI recruiting campaigns, mentoring high school to college students in careers in consulting</li>
-                        </ul>
 
-                    </responsibilities>
+
+                        <responsibilities class="responsibilities">
+                            <ul>
+                                <li>Segmented customers using k-means clustering algorithm to identify different target groups for advertising</li>
+                                <li>Supported billing migration effort by identifying key customer groups using clustering and classification machine learning models</li>
+                                <li>Developed and implemented a classification model to accurately predict customer churn</li>
+                                <li>Designed and built dashboards in Tableau and Power BI to present data quality errors to executive leadership</li>
+                                <li>Designed, built, and deployed data pipelines using Python, SQL, and AWS services</li>
+                            </ul>
+                            <p class="capacity">
+                                <i>Leadership Roles</i>
+                            </p>
+                            <ul>
+                                <li>Led a cross-functional team of 5 engineers and data analysts to identify and resolve a $43M annual revenue leak</li>
+                                <li>Facilitated DEI recruiting campaigns, mentoring high school to college students in careers in consulting</li>
+                                <li>Led a team of 12 as a project manager in an AWS cloud migration for a large consumer products company</li>
+                                <li>Organized a panel event with 1k+ attendees on Generative AI and Natural Language Processing</li>
+                                <li>Led a team of 6 to identify Generative AI use cases across Telecommunication, Technology, and Media industries, resulting in $25M in sold engagements</li>
+                            </ul>
+
+
+                        </responsibilities>
                 </role>
+
+
             </company>
 
             <company class="company">
@@ -114,7 +125,7 @@
                             <li>Retrieved and analyzed transaction data using Python and SQL</li>
                             <li>Managed a team of 7 direct report staff auditors in the completion of a 15,000 hour annual audit</li>
                             <li>Created process flow diagrams and narratives to understand complex accounting processes and identify risks of material misstatement</li>
-                            <li>Traveled to Gurgaon, India office to build relationships and expand utilization of USI team, increasing offshore utilization by 18% and created a 24-hour work cycle.</li>
+                            <li>Expanded utilization of India based team, increasing offshore utilization by 18% and creating a 24-hour work cycle.</li>
                         </ul>
 
                     </responsibilities>
