updated bullet points

--- a/src/resume.html
+++ b/src/resume.html
@@ -79,18 +79,19 @@
 
                         <responsibilities class="responsibilities">
                             <ul>
-                                <li>Segmented customers using k-means clustering algorithm to identify different target groups for advertising</li>
-                                <li>Supported billing migration effort by identifying key customer groups using clustering and classification machine learning models</li>
-                                <li>Developed and implemented a classification model to accurately predict customer churn</li>
+                                <li>Segmented customers using k-means clustering and scikit-learn to identify different groups for targeted advertising</li>
+                                <li>Developed a change detection model to identify when a customer should be alerted of overspending, resulting in an 8% decrease in over-billing incidents</li>
+                                <li>Developed and implemented a classification model to accurately predict customer churn, resulting in the identification of a material revenue leak</li>
+                                <li>Developed a billing account data quality monitoring tool using Python, Pandas, DynamoDB and RDS databases, and Kinesis Firehose reducing billing errors by 8%</li>
                                 <li>Designed and built dashboards in Tableau and Power BI to present data quality errors to executive leadership</li>
-                                <li>Designed, built, and deployed data pipelines using Python, SQL, and AWS services</li>
+                                <li>Designed, built, and deployed data pipelines and APIs using Python, SQL, and AWS services</li>
                             </ul>
                             <p class="capacity">
                                 <i>Leadership Roles</i>
                             </p>
                             <ul>
                                 <li>Led a cross-functional team of 5 engineers and data analysts to identify and resolve a $43M annual revenue leak</li>
-                                <li>Facilitated DEI recruiting campaigns, mentoring high school to college students in careers in consulting</li>
+                                <li>Facilitated DEI recruiting campaigns, mentoring high school to college students in careers in consulting, resulting an 10 full-time offers extended</li>
                                 <li>Led a team of 12 as a project manager in an AWS cloud migration for a large consumer products company</li>
                                 <li>Organized a panel event with 1k+ attendees on Generative AI and Natural Language Processing</li>
                                 <li>Led a team of 6 to identify Generative AI use cases across Telecommunication, Technology, and Media industries, resulting in $25M in sold engagements</li>
@@ -114,13 +115,12 @@
                 <role class="role">
                     <p>
                         <span class="left"><i>Senior Auditor - Analytics</i></span>
-                        <span class="right"><i>(Fall/Winter/Spring)</i></span>
                         <br>
 
                     </p>
                     <responsibilities class="responsibilities">
                         <ul>
-                            <li>Designed outlier detection model to identify unusual transactions for audit selection, reducing audit hours by 8%</li>
+                            <li>Designed outlier detection model to identify unusual transactions for audit selection, reducing audit hours by 3%</li>
                             <li>Gathered visualization requirements, retrieved transaction data, and designed and built Tableau visualizations to further audit risk assessment</li>
                             <li>Retrieved and analyzed transaction data using Python and SQL</li>
                             <li>Managed a team of 7 direct report staff auditors in the completion of a 15,000 hour annual audit</li>
@@ -145,10 +145,9 @@
                 <li>Completed the
                     <a href="https://cloudresumechallenge.dev/docs/the-challenge/aws/">cloud resume challenge</a>
                     using AWS services (Lambda, Route 53, API Gateway, S3, DynamoDB) and deployed using CloudFormation</li>
-                <li>Created a network visualization to cluster incoming students based on common friends, increasing orientation program attendance by 12% year over year</li>
                 <li>Built a <a href="https://github.com/chris-messer/e-ink-budget-tracker">personal budget tracker</a> using a Raspberry Pi, Python, and Mint.com API</li>
                 <li><a href="https://github.com/chris-messer/bitcoin-sentiment-price-analysis">Completed an analysis</a> that measures the correlation between sentiment of Bitcoin Tweets and Reddit comments and the price of Bitcoin</li>
-
+                <li><a href="https://github.com/chris-messer/course-work">Created a portfolio</a> demonstrating functional and technical knowledge of linear and logistic regression models, support vector machines, simulation, optimization, change detection, time series forecasting, decision trees, and other analytical tools</li>
             </ul>
             </responsibilities>
         </section>
@@ -157,10 +156,9 @@
             <h2 class="title">COMPETENCIES</h2>
             <hr>
             <ul class="competencies_list">
-                <li>Specialist Certification – Word, Excel, PowerPoint, Access</li>
-                <li>Programming Languages – Python, SQL, R</li>
-                <li>Cloud Services – AWS, GCP</li>
-                <li>Data visualization software – Tableau, Power BI, Gephi</li>
+                <li>Programming Languages – Python (Pandas, scikit-learn, Numpy), SQL, R</li>
+                <li>Cloud Services – AWS(Lambda, Route 53, API Gateway, S3, DynamoDB, Kinesis)</li>
+                <li>Data visualization software – Tableau, Power BI</li>
                 <li>Professional Certifications – Texas Certified Public Accountant (CPA)</li>
             </ul>
         </section>
