--- a/src/resume.html
+++ b/src/resume.html
@@ -27,40 +27,16 @@
 
 
     <main>
-        <section id="Education">
-
-            <h2 class="title">EDUCATION</h2>
+        <section id="competencies">
+            <h2 class="title">SKILLS</h2>
             <hr>
-            <school class="school">
-                <h3 class="schoolname">Georgia Institute of Technology</h3>
-                    <degree_ class="degree">
-                        <p>
-                            <span class="left">Master of Science, Computation Analytics</span><span class="right">In Progress</span>
-                            <div style="clear: both;"></div>
-                            <br>
-                        </p>
-                    </degree_>
-            </school>
-
-            <school class="school">
-                <h3 class="schoolname">Texas Christian University, Neeley School of Business</h3>
-                    <degree_ class="degree">
-                        <p>
-                            <span class="left">Master of Accounting <i>(Honors)</i></span><span class="right">May 2018</span>
-                            <br>
-                        </p>
-                    </degree_>
-
-                    <degree_ class="degree">
-                        <p>
-                            <span class="left">B.B.A., Accounting & Finance <i>(Magma Cum Laude)</i></span><span class="right">May 2018</span>
-                            <br>
-                        </p>
-                    </degree_>
-            </school>
-             <!-- end description -->
+            <ul class="competencies_list">
+                <li><b>Programming Languages:</b> Python (Pandas, Scikit-learn, Numpy), SQL, R</li>
+                <li><b>Cloud Services:</b> AWS (Lambda, Route 53, API Gateway, S3, DynamoDB, Kinesis)</li>
+                <li><b>Data Visualization Software:</b> Tableau, Power BI</li>
+                <li><b>Professional Certifications:</b> Texas Certified Public Accountant (CPA)</li>
+            </ul>
         </section>
-
         <section id="Professional Experience">
             <h2 class="title">PROFESSIONAL EXPERIENCE</h2>
             <hr>
@@ -79,10 +55,11 @@
 
                         <responsibilities class="responsibilities">
                             <ul>
-                                <li>Segmented customers using k-means clustering and scikit-learn to identify different groups for targeted advertising</li>
+
                                 <li>Developed a change detection model to identify when a customer should be alerted of overspending, resulting in an 8% decrease in over-billing incidents</li>
-                                <li>Developed and implemented a classification model to accurately predict customer churn, resulting in the identification of a material revenue leak</li>
-                                <li>Developed a billing account data quality monitoring tool using Python, Pandas, DynamoDB and RDS databases, and Kinesis Firehose reducing billing errors by 8%</li>
+                                <li>Developed and implemented a logistic regression model to analyze contributing factors to customer churn, resulting in the identification of a material revenue leak</li>
+                                <li>Designed the data model for a large wine and spirits distributor</li>
+                                <li>Developed a billing account data quality monitoring tool using Python, Pandas, DynamoDB and RDS databases, and Kinesis Firehose, reducing billing errors by 8%</li>
                                 <li>Designed and built dashboards in Tableau and Power BI to present data quality errors to executive leadership</li>
                                 <li>Designed, built, and deployed data pipelines and APIs using Python, SQL, and AWS services</li>
                             </ul>
@@ -90,7 +67,7 @@
                                 <i>Leadership Roles</i>
                             </p>
                             <ul>
-                                <li>Led a cross-functional team of 5 engineers and data analysts to identify and resolve a $43M annual revenue leak</li>
+                                <li>Led a cross-functional team of 5 engineers and data analysts to identify and resolve a $43M annual revenue leak at a large, online employment board tech company</li>
                                 <li>Facilitated DEI recruiting campaigns, mentoring high school to college students in careers in consulting, resulting an 10 full-time offers extended</li>
                                 <li>Led a team of 12 as a project manager in an AWS cloud migration for a large consumer products company</li>
                                 <li>Organized a panel event with 1k+ attendees on Generative AI and Natural Language Processing</li>
@@ -152,15 +129,40 @@
             </responsibilities>
         </section>
 
-        <section id="competencies">
-            <h2 class="title">COMPETENCIES</h2>
+
+
+        <section id="Education">
+
+            <h2 class="title">EDUCATION</h2>
             <hr>
-            <ul class="competencies_list">
-                <li>Programming Languages – Python (Pandas, scikit-learn, Numpy), SQL, R</li>
-                <li>Cloud Services – AWS(Lambda, Route 53, API Gateway, S3, DynamoDB, Kinesis)</li>
-                <li>Data visualization software – Tableau, Power BI</li>
-                <li>Professional Certifications – Texas Certified Public Accountant (CPA)</li>
-            </ul>
+            <school class="school">
+                <h3 class="schoolname">Georgia Institute of Technology</h3>
+                <degree_ class="degree">
+                    <p>
+                        <span class="left">Master of Science, Computation Analytics</span><span class="right">In Progress</span>
+                    <div style="clear: both;"></div>
+                    <br>
+                    </p>
+                </degree_>
+            </school>
+
+            <school class="school">
+                <h3 class="schoolname">Texas Christian University, Neeley School of Business</h3>
+                <degree_ class="degree">
+                    <p>
+                        <span class="left">Master of Accounting <i>(Honors)</i></span><span class="right"></span>
+                        <br>
+                    </p>
+                </degree_>
+
+                <degree_ class="degree">
+                    <p>
+                        <span class="left">B.B.A., Accounting & Finance <i>(Magma Cum Laude)</i></span><span class="right"></span>
+                        <br>
+                    </p>
+                </degree_>
+            </school>
+            <!-- end description -->
         </section>
 
 
